--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,8 @@
               
            </div>
            <p class="text-center">Copyright ©2020 All rights reserved </p>
-    </footer>
+        </div>
+          </footer>
 
 
 
