--- a/workdetail.html
+++ b/workdetail.html
@@ -61,6 +61,7 @@
                
             </div>
             <p class="text-center mb-[54px]">Copyright ©2020 All rights reserved </p>
-    </footer>
+        </div>  
+          </footer>
 </body>
 </html>
