--- a/works.html
+++ b/works.html
@@ -94,6 +94,7 @@
                
             </div>
             <p class="text-center">Copyright ©2020 All rights reserved </p>
-    </footer>
+        </div>
+          </footer>
 </body>
 </html>
