--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
           
         </div>
     </section>
+
     <footer>
         <div class="max-w-7xl mx-auto px-5 mt-10">
            <div class="flex space-x-5 justify-center py-5 ">
@@ -148,6 +149,7 @@
               
            </div>
            <p class="text-center">Copyright ©2020 All rights reserved </p>
+        </div>   
     </footer>
 
 </body>
